fix images sizes to avoid layout shift

--- a/themes/ntun/sass/_base.scss
+++ b/themes/ntun/sass/_base.scss
@@ -63,7 +63,6 @@ h3 {
 
 img.hero {
   max-width: 100%;
-  width: 1000px;
 }
 
 .hero-headline {
